scribble-test/src/test/resources/good/syntax/inlinedunfolding/gcontinue/Test05.scr
module good.syntax.inlinedunfolding.gcontinue.Test05;


global protocol Proto1(role A, role B)
{
	rec X
	{
		1() from A to B;
		choice at A
		{
			continue X;
		}
		or
		{
			2() from A to B;
		}
	}
}

